force-app/main/default/objects/Employee__c/fields/Available_off_days__c.field-meta.xml
<CustomField>
    <fullName>Available_off_days__c</fullName>
    <formula>Total_Off_Days__c - Used_Off_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available off days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>