force-app/main/default/objects/Employee__c/fields/Contract_Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contract_Termination_Reason__c</fullName>
    <label>Contract Termination Reason</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
</CustomField>