force-app/main/default/objects/Employee__c/fields/Descript_on__c.field-meta.xml
<CustomField>
    <fullName>Descript_on__c</fullName>
    <label>Descriptıon</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>