force-app/main/default/objects/Employee__c/fields/Officer_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Officer_User_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Officer User Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>