force-app/main/default/objects/Employee__c/fields/Working_Field__c.field-meta.xml
<CustomField>
    <fullName>Working_Field__c</fullName>
    <label>Working Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Supporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>