force-app/main/default/objects/Employee__c/validationRules/Contract_ENd_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_ENd_rule</fullName>
    <active>true</active>
    <errorConditionFormula>Currently_Working__c = FALSE
 &amp;&amp; 
  ISBLANK(Contract_End_Date__c )</errorConditionFormula>
    <errorDisplayField>Contract_End_Date__c</errorDisplayField>
    <errorMessage>If a worker is not working currently, the contract end date should be entered.</errorMessage>
</ValidationRule>