force-app/main/default/objects/Employee__c/validationRules/Facility_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Facility_Rule</fullName>
    <active>true</active>
    <description>if a worker is working in ‘Facility’ department, they see the exact area</description>
    <errorConditionFormula>AND(ISPICKVAL( Working_Field__c ,&apos;Facilities&apos; ),
ISBLANK(Working_Subfield__c))</errorConditionFormula>
    <errorDisplayField>Working_Subfield__c</errorDisplayField>
    <errorMessage>’If the working area is ‘Facilities’, the
‘Working Subfield’ field should be entered.</errorMessage>
</ValidationRule>